# oxidized

./: .gitmodules  Cargo.toml  build.rs
devices/: Cargo.toml
devices/src/: lib.rs  well_known.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
ipcs/: Cargo.toml
kernel/: Cargo.toml  add-components  build.rs
kernel/.cargo/: config.toml
kernel/kernel_vga_buffer/: Cargo.toml
kernel/kernel_vga_buffer/src/: lib.rs
kernel/pal/: Cargo.toml
kernel/pal/src/: lib.rs
kernel/pal_x86_64/: Cargo.toml
kernel/pal_x86_64/src/: lib.rs  qemu_test_helpers.rs  serial.rs
kernel/src/: main.rs  panic.rs  test_runner.rs  unit_tests.rs
kernel/src/acpi/: mod.rs
kernel/src/arch/: mod.rs
kernel/src/arch/arch_x86_64/: cpuid.rs  mod.rs
kernel/src/arch/arch_x86_64/acpi/: mod.rs
kernel/src/arch/arch_x86_64/apic/: mod.rs
kernel/src/arch/arch_x86_64/cpu/: mod.rs  trampoline.nasm
kernel/src/arch/arch_x86_64/gdt/: mod.rs
kernel/src/arch/arch_x86_64/idt/: contextswitch.rs  mod.rs
kernel/src/arch/arch_x86_64/syscall/: mod.rs
kernel/src/arch/arch_x86_64/timer/: mod.rs
kernel/src/arch/x86_64/: boot.rs  mod.rs  virtual_memory.rs
kernel/src/console/: mod.rs
kernel/src/device/: mod.rs  well_known.rs
kernel/src/errors/: mod.rs
kernel/src/framebuffer/: mod.rs
kernel/src/framebuffer/console/: mod.rs
kernel/src/interrupts/: mod.rs
kernel/src/interrupts/arch_x86_64/: mod.rs
kernel/src/interrupts/arch_x86_64/gdt/: mod.rs
kernel/src/interrupts/arch_x86_64/idt/: mod.rs
kernel/src/loader/: mod.rs
kernel/src/logging/: mod.rs
kernel/src/memory/: allocator.rs  heap.rs  mod.rs  page_allocator.rs  page_tracker.rs
kernel/src/serial/: mod.rs
kernel/src/thread/: context.rs  mod.rs  process.rs  scheduler.rs
kernel/src/thread/context/: mod.rs
kernel/src/thread/scheduler/: mod.rs
kernel_shared/: Cargo.toml
kernel_shared/src/: constants.rs  handle.rs  ipc.rs  kernel_state.rs  lib.rs  memory.rs  syscall.rs
klib/: Cargo.toml
klib/src/: lib.rs
memorymanager/: Cargo.toml
processmanager/: Cargo.toml
src/: main.rs
