[package]
name = "os"
version = "0.11.0"
edition = "2021"

[workspace]
members = [
	"kernel",
	"kernel_shared",
	"loader",
	"memorymanager",
	"processmanager",
	"ipcs",
	"ipc"
]
exclude = ["bootloader"]

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = {path = "bootloader", version = "*", default-features = false, features = [ "uefi" ] }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

