[package]
name = "os"
version = "0.11.0"
edition = "2021"

[workspace]
members = [
	"kernel"
]
exclude = ["bootloader"]

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = {path = "bootloader", version = "*"  }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

