[package]
name = "os"
version = "0.11.0"
edition = "2021"

[workspace]
members = [
	"kernel","klib"
]

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = {version = "0.11", default_features = false, features = ["uefi"] }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

