[package]
name = "devices"
version = "0.1.0"
edition = "2021"

[features]
default = []
kernel = []

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = { version = "0.9" }
uart_16550 = "0.2"
bitvec = { version = "1.0", default_features = false, features = ["atomic"] }
uuid = { version = "1.2.2", default_features = false }

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]


[build-dependencies]
nasm-rs="0.2.4"
walkdir = "2"