[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = { version = "0.11.0" }
volatile = "0.4.5"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = { version = "0.9.4" }
uart_16550 = "0.2.0"
linked_list_allocator = { version = "0.10.4", features = ["use_spin"] }
bitvec = { version = "1.0.0", default_features = false, features = ["atomic"] }
kernel_shared = {path = "../kernel_shared", default_features = false, features = ["kernel"]}


[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.10"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "10.2.0"
x86 = { version = "0.52", default-features = false }
pic8259 = "0.10.1"
acpi = "4.1.1"