[package]
name = "kernel_shared"
version = "0.1.0"
edition = "2021"

[features]
kernel = []
server = ["client"]
client = []
default = ["client"]

[dependencies]
anyhow = { version = "1.0.69", default-features = false }
uuid = { version = "1.3.0", default_features = false }
postcard = { version =  "1.0.0", features = [ "alloc" ] }

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*", default-features = false }